# peacefair

./: LICENSE  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
include/: daemonize.h  energy_environment.h  sk_tools.h
scripts/: Makefile.am  Makefile.in  energy.cfg  energy.service  energy_dump.service
system/: Makefile.am  Makefile.in  energy_com_classes.cpp  energy_com_classes.h  energy_med_classes.cpp  energy_med_classes.h
tools/: Makefile.am  Makefile.in  energy_com_tool.cpp  energy_dump.cpp  energy_read.cpp  energy_write.cpp
