
servicedir = /lib/systemd/system
service_SCRIPTS = energy.service
service_CLEANFILES = $(service_SCRIPTS)

servicedumpdir = /lib/systemd/system
servicedump_SCRIPTS = energy_dump.service
servicedump_CLEANFILES = $(servicedump_SCRIPTS)

configdir = /etc/energy
config_SCRIPTS = energy.cfg
config_CLEANFILES = $(config_SCRIPTS)
